[PN-11100] Cleaned code